--- a/public/css/myorder.css
+++ b/public/css/myorder.css
@@ -181,19 +181,7 @@ and (orientation:portrait){
         left: 157px!important;
         font-size: 40px;
     }
-    .headmenu .icons .icons2 {
-        width: 5rem;
-        height: 5rem;
-        position: relative;
-        left: 12rem!important;
-    }
-    .headmenu .icons .icons3 {
-        width: 78px;
-        height: 68px;
-        position: relative;
-        left: 6rem;
-    }
-   
+
     .dropdown-content-account {
         font-size: 47px!important;
         width: 468px!important;
@@ -388,13 +376,6 @@ and (orientation:portrait){
     .user-name strong {
         font-size: 16px;
     }
-    .headmenu .icons .icons3 {
-        width: 40px;
-    }
-    .headmenu .icons .icons2 {
-        width: 40px;
-        height: 40px;
-    }
     span.account-c {
         position: relative;
         left: 15px;
@@ -433,10 +414,6 @@ and (orientation:portrait){
     }    
     .icons2 {
         margin-left: -15px;
-    }
-    .headmenu .icons .icons2 {
-        width: 2.5rem;
-        height: 2.5rem;
     }
     .order-stat {
         padding: 15px;
@@ -575,13 +552,7 @@ and (orientation:portrait){
     .dropdown-content-account {
         width: 285px;
     }
-    .headmenu .icons .icons3 {
-        width: 45px;
-    }
-    .headmenu .icons .icons2 {
-        width: 3rem;
-        height: 3rem;
-    }
+
     .footer-section {
         width: 1440px;
     }
@@ -668,10 +639,7 @@ and (orientation:portrait){
     .footer-section {
         width: 1440px;
     }
-    .headmenu .icons .icons2 {
-        width: 4rem;
-        height: 4rem;
-    }
+
     .d-arrow {
         position: relative;
         left: 10%;
@@ -694,23 +662,6 @@ and (orientation:portrait){
     }          
 
     /* navbar css */
-    button.menu-toggle {
-        width: 45%;
-        height: 60px;
-        font-size: 36px;
-        position: relative;
-        left: 7rem;
-    }  
- 
-    .headmenu .icons .icons3 {
-        width: 4.1875rem;
-    }
-    .headmenu .icons .icons2 {
-        width: 4rem;
-        height: 4rem;
-        position: relative;
-        left: 4rem;
-    }
     .add-to {
         position: relative;
         left: 3rem;
@@ -727,10 +678,7 @@ and (orientation:portrait){
         bottom: 45px;
         left: 43px;
         font-size: 40px;
-    }    
-    .topnav.responsive .ordinary {
-        width: 1440px;
-    }    
+    }      
     .page-container {
         position: relative;
         left: 0rem;
@@ -832,20 +780,6 @@ and (orientation:portrait){
     .image-cont img {
         margin: 5px;
         width: 92px;
-    }
- 
-    .headmenu .icons .icons2 {
-        width: 4rem;
-        height: 4rem;
-    }
-    .headmenu .icons .icons3 {
-        width: 4.1875rem;
-    }
-
-    button.menu-toggle {
-        width: 50%;
-        height: 55px;
-        font-size: 35px;
     }
     .page-sub-container h1 {
         font-size: 40px;
@@ -969,13 +903,6 @@ and (orientation:portrait){
     td.check-price1 {
         font-size: 40px;
     }    
-    button.menu-toggle {
-        width: 50%;
-        height: 70px;
-        font-size: 38px;
-        position: relative;
-        left: 3rem;
-    }
     button.receive {
         position: relative;
         top: 12rem;
@@ -1004,10 +931,6 @@ and (orientation:portrait){
     }
     .topnav a {
         width: 300px;
-    }
-    .topnav.responsive .ordinary {
-        font-size: 40px;
-        padding: 30px;
     }
     .page-container {
         padding: 44px 0;
@@ -1049,14 +972,6 @@ and (orientation:portrait){
         /* left: 8rem; */
     }
 
-    .headmenu .icons .icons2 {
-        width: 5rem;
-        height: 5rem;
-    }
-    .headmenu .icons .icons3 {
-        width: 5.1875rem;
-    }
- 
     .topnav a {
         font-size: 40px;
     }
@@ -1096,9 +1011,6 @@ and (orientation:portrait){
     span.sp {
         font-size: 42px;
     }    
-    .topnav.responsive .ordinary {
-        padding: 35px 0px;
-    }
     .add-to {
         position: relative;
         left: 0rem;
@@ -1107,22 +1019,7 @@ and (orientation:portrait){
         position: relative;
         right: 3rem;
     }
-    button.menu-toggle {
-        font-size: 45px;
-        width: 85px;
-        height: 80px;
-        border-radius: 0;
-        position: relative;
-        left: 3rem!important;
-    }
-    .headmenu .icons .icons3 {
-        width: 5.1875rem;
-    }
-    .headmenu .icons .icons2 {
-        width: 5rem;
-        height: 5rem;
-    }
-  
+
     /* .center td {
         width: 450px;
     } */
@@ -1228,10 +1125,7 @@ and (orientation:portrait){
         width: 5.1875rem;
         height: 5.1875rem;
     }
-    .headmenu .icons .icons2 {
-        width: 5rem;
-        height: 5rem;
-    }
+
     button.menu-toggle {
         width: 55%;
         height: 95px;
@@ -1291,12 +1185,7 @@ and (orientation:portrait){
         /* left: 11rem; */
         font-size: 42px;
     }
-    .headmenu .icons .icons2 {
-        width: 6rem;
-        height: 6rem;
-        position: relative;
-        top: .5rem;
-    }
+
     .headmenu .des-logo .logos {
         width: 325px;
     }
@@ -1332,4 +1221,135 @@ and (orientation:portrait){
         left: 8rem;
     }
 }    
+
+
+
+@media screen and (max-width: 1024px) and (min-width: 768px){
+    /* Header */
+.headmenu {
+    display: flex;
+    height: auto;
+    padding: 112px 0;
+    height: 275px;
+  }
+  .headmenu .des-logo .logos {
+    margin-left: 0px;
+    margin-top: -58px;
+  }
+  .headmenu .des2 {
+    color: #f3f2f1;
+    /* position: absolute; */
+    left: unset;
+    font-size: 25px;
+    top: 84px;
+    width: 100%;
+    font-weight: bold;
+  }
+  .headmenu .des1 {
+    position: unset;
+    font-size: 40px;
+    /* display: none; */
+  }
+  .des-logo img {
+    width: 250px;
+  }
+  .search-icon img {
+    width: 115px;
+    height: 100px;
+    margin-right: 10px;
+  }
+  .headmenu .icons .icons3 {
+    margin-top: 7px;
+    width: 115px;
+    height: 100px;
+  } 
+  .headmenu .icons .icons2 {
+    width: 130px;
+    height: 110px;
+    border-radius: 50%;
+    margin-right: 51px;
+    margin-left: 36px;
+  }
+  button.menu-toggle {
+    width: 100%;
+    height: 8.6875rem;
+    font-size: 75px;
+    border-radius: 15px;
+  }
+  a#numb-item {
+    position: absolute;
+    background: #c4a256;
+    width: 91px;
+    height: 89px;
+    text-align: center;
+    border-radius: 50%;
+    color: #fff;
+    padding: 4px 0;
+    bottom: 1px;
+    left: 71px;
+    font-size: 69px;
+  }
+  .topnav.responsive {
+    transition: .2s ease-in;
+    border-top: solid #ccc 1px;
+    height: 175px;
+  }
+  .topnav.responsive .ordinary {
+    font-size: 71px;
+    position: relative;
+    left: -1em;
+    padding: 43px 0px;
+  }
+  .topnav.responsive a {
+    max-height: 600px;
+    width: 465px;
+  }
+  .topnav a {
+    width: 230px;
+    font-size: 71px;
+  
+  }
+  .d-arrow {
+    width: 53px;
+  }
+  
+  /* End of Header */
+  
+  /* Start of Footer */
+  
+  .footer-contact-info {
+    line-height: 90px;
+  }
+  .footer-title-gallery {
+    width: 60%;
+    height: 110px;
+  }
+  .info-contacts {
+    font-size: 50px;
+    width: 32%;
+    position: relative;
+    left: 1rem;
+  }
+  span.sp {
+    width: 65%;
+    font-size: 45px;
+    line-height: 75px;
+  }
+  span.footer-title {
+    font-size: 60px;
+  }
+  .image-cont img {
+    width: 200px;
+  }
+  .image-cont {
+    height: 300px;
+    overflow: auto;
+  }
+  .social-media-icons a img {
+    height: 110px;
+  }
+  
+  /* End of Footer */
+  }
+  
 
