--- a/public/css/contactus.css
+++ b/public/css/contactus.css
@@ -29,7 +29,7 @@ h3.text-center.touch {
     margin-bottom: 30px;
 }
 
-input {
+input.place-font {
     width: 100%;
     height: 55px;
     margin-bottom: 10px;
@@ -86,7 +86,7 @@ span.text_1 {
     span.text_1 {
         font-size: 21px;
     }
-    input {
+    input.place-font {
         width: 100%;
         height: 50px;
         margin-bottom: 10px;
