--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,6 +19,7 @@ button.reorder {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+  border-radius: 5px;
 }
 td.pst-price {
   position: relative;
@@ -1699,5 +1700,25 @@ table.order-table {
     justify-content: center;
     margin: 50px 0;
     line-height: 30px;
+}
+table.reorder-table {
+    width: 100%;
+}
+.my-order-image img {
+    width: 121px;
+}
+.my-order-sub {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 26px 0px;
+    border-top: solid 1px #ccc;
+}
+.my-order-cont {
+    height: 500px;
+    overflow: auto;
+}
+.my-order-name {
+    color: #c4a256;
 }
 /*end orderpage*/
