--- a/public/css/myprofile.css
+++ b/public/css/myprofile.css
@@ -69,7 +69,7 @@ div#edit-profile {
 .edt {
     text-align: center;
 }
-input {
+.edit-profile input {
     font-size: 16px;
     width: 100%;
     height: 40px;
