--- a/public/css/userlogin.css
+++ b/public/css/userlogin.css
@@ -1,8 +1,12 @@
-.account-log input {
+input.form-control {
     font-size: 16px;
     width: 100%;
     height: 40px;
     margin-top: 10px;
+}
+
+.signup-button {
+    margin-top: 1rem;
 }
 .account-log {
     padding-top: 10px;
