--- a/public/css/checkout.css
+++ b/public/css/checkout.css
@@ -33,7 +33,24 @@ select.select-date {
   width: 100%;
   height: 50%;
 }
-
+input.select-date {
+  width: 100%;
+  overflow: hidden;
+  border: 1px solid #000;
+  position: relative;
+  padding: 15px 10px;
+  bottom: 1rem;
+  z-index: 99;
+}
+input.select-time {
+  width: 100%;
+  overflow: hidden;
+  border: 1px solid #000;
+  position: relative;
+  padding: 15px 10px;
+  bottom: 1rem;
+  z-index: 99;
+}
 select.select-time {
   width: 100%;
   height: 50%;
@@ -97,9 +114,7 @@ select.select-time {
   transition: background-color 0.1s linear;
   height: 100%;
 }
-.check-top {
-  margin-top: 24px;
-}
+
 .address-line {
   font-size: 15px;
   line-height: 26px;
