--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -588,7 +588,8 @@
 	}
 	.container {
 	    max-width: 1440px;
-	    width: 1440px;
+	    /*width: 1440px;*/
+        width: 100%;
 	}
 	.search-icon img{
 		width: 39px;
